compiler/testData/diagnostics/tests/incompleteCode/diagnosticWithSyntaxError/incompleteValWithAccessor.kt
// RUN_PIPELINE_TILL: FRONTEND
package c

val i : String get() =<!SYNTAX!><!>

/* GENERATED_FIR_TAGS: propertyDeclaration */
